# DeployR

./: .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: deployr.xml
docs/: Doxyfile
examples/: meson.build
examples/deploy/: cloudr.cpp  cloudr.json  coordinator.hpp  deploy.cpp  deploy.hpp  deployment.json  driver.hpp  meson.build  mpi.cpp  request.json  worker.hpp
include/deployr/: channel.hpp  common.hpp  deployment.hpp  deployr.hpp  engine.hpp  host.hpp  meson.build  request.hpp  runner.hpp
include/deployr/engines/: cloudr.hpp  cloudrMPI.hpp  local.hpp  mpi.hpp  none.hpp
