# Handling distributed engine options
if distributedEngine == 'mpi'
DeployRDistributedCppFlag = '-D_DEPLOYR_DISTRIBUTED_ENGINE_MPI'
endif

if distributedEngine == 'lpf'
DeployRDistributedCppFlag = '-D_DEPLOYR_DISTRIBUTED_ENGINE_LPF'
endif

if distributedEngine == 'none'
DeployRDistributedCppFlag = '-D_DEPLOYR_DISTRIBUTED_ENGINE_NONE'
endif
